@@ -1,5 +1,5 @@
 # Function Name: 	ripSeek
-# Description: 		Grand master function of RIPSeeker: run mainSeek or mainSeekMC with or without control library
+# Description: 		Grand master function of RIPSeeker: run mainSeek with or without control library
 # Input: 			bamPath to bam files (either a single dir or the multiple file paths) 
 # Output:			GappedAlignment and GRanges objects representating alignment object after disambiguating multihits (if any) and predicted RIP regions in a defined format (default: GFF3)
 #
